--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -21,6 +21,7 @@
 }
 
 .alternativeHeaderTitle {
+    position: relative;
     background-color: hsl(0, 0%, 28%);
     color: white;
     text-align: center;
@@ -28,6 +29,7 @@
     width: 100%;
     border-bottom: 1px solid white;
     display: flex;
+    align-items: center;
 }
 
 .alternativeHeaderTitle > span {
@@ -35,14 +37,23 @@
 }
 
 .alternativeHeaderTitle > a {
-    margin-right: 1rem;
-    margin-left: auto;
+    width: 24px;
+    height: 24px;
 }
 
 .alternativeHeaderTitle svg {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    scale: 0.8;
     cursor: pointer;
     stroke: white;
     fill: transparent;
+}
+
+.alternativeHeaderTitle svg:hover {
+    scale: 0.7;
+    transition: all 0.3s ease-in;
 }
 
 .alternativeHeaderMain {
