--- a/src/frontend/core/components/profile/profile.css
+++ b/src/frontend/core/components/profile/profile.css
@@ -44,7 +44,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
     justify-content: flex-start;
 }
 
@@ -55,6 +55,12 @@
     border: solid 1px white;
     border-radius: 50%;
     padding: 0.3rem;
+    text-align: center;
+}
+
+.profileChangePasswordButton:hover {
+    scale: 1.15;
+    transition: all 0.3s ease-in;
 }
 
 .clickable {
