--- a/src/frontend/core/commonComponents/login/Login.css
+++ b/src/frontend/core/commonComponents/login/Login.css
@@ -2,10 +2,17 @@
     display: block;
 }
 
+.loginTitle {
+    font-size: 1.2rem;
+    text-decoration: underline;
+}
+
 .loginFormLabel {
     width: 200px;
     text-align: left;
 }
+
+
 
 .loginFormInput {
     width: 200px;
@@ -25,4 +32,12 @@
     color: white;
     padding: 5px;
     cursor: pointer;
+}
+
+.loginCookieInfo {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    background-color: hsl(120, 20%, 50%);
 }
