--- a/src/frontend/core/components/snippet/snippet.css
+++ b/src/frontend/core/components/snippet/snippet.css
@@ -157,6 +157,15 @@
     font-weight: bold;
 }
 
+.snippetLeftHeader svg {
+    transform: scale(0.8);
+}
+
+.snippetLeftHeader svg:hover {
+    transform: scale(0.7);
+    transition: all 0.3s ease-in;
+}
+
 .snippetRightHeader {
     width: 41vw;
     position: relative;
@@ -181,10 +190,10 @@
 }
 
 .snippetRightHeader svg {
-    scale: 0.8;
+    transform: scale(0.8);
 }
 .snippetRightHeader svg:hover {
-    scale: 0.7;
+    transform: scale(0.7);
     transition: all 0.3s ease-in;
 }
 
