--- a/src/frontend/core/commonComponents/hoverSelect/hoverCompact.css
+++ b/src/frontend/core/commonComponents/hoverSelect/hoverCompact.css
@@ -64,9 +64,9 @@
 }
 
 .searchCompact > svg {
-    scale: 0.8;
+    transform: scale(0.8);
 }
 .searchCompact > svg:hover {
-    scale: 0.7;
+    transform: scale(0.7);
     transition: all 0.3s ease-in;
 }
