--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -45,14 +45,14 @@
     position: absolute;
     top: 0px;
     right: 10px;
-    scale: 0.8;
+    transform: scale(0.8);
     cursor: pointer;
     stroke: white;
     fill: transparent;
 }
 
 .alternativeHeaderTitle svg:hover {
-    scale: 0.7;
+    transform: scale(0.7);
     transition: all 0.3s ease-in;
 }
 
